manifest/controller.yml
kind: Deployment 
apiVersion: extensions/v1beta1
metadata:
  namespace: gitlab 
  name: jenkins-controller
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: jenkins
    spec:
      containers:
        - name: jenkins
          image: 172.31.78.217:5000/jenkins-test:v1
          command:
            - java
            - -jar
            - jenkins.war
          args:
            - --httpPort=8080
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: host-time
              mountPath: /etc/localtime
              readOnly: true
      volumes:
        - name: host-time
          hostPath:
            path: /etc/localtime
