manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: gitlab 
  labels:
    proxy: jenkins
  name: jenkins-test
spec:
  type: ClusterIP
  ports:
  - name: http 
    port: 80 
    targetPort: 8080
  selector:
    component: jenkins
